--- a/src/Eccube/Resource/template/admin/Order/index.twig
+++ b/src/Eccube/Resource/template/admin/Order/index.twig
@@ -506,7 +506,7 @@ file that was distributed with this source code.
                         </div>
                         <div class="card rounded border-0 mb-4 d-block">
                             <div class="card-body p-0">
-                                <table class="table table-sm" id="search_result">
+                                <table class="table table-lg" id="search_result">
                                     <thead>
                                     <tr>
                                         <th class="border-top-0 pt-2 pb-2 text-center pl-3">
@@ -520,7 +520,7 @@ file that was distributed with this source code.
                                         <th class="border-top-0 pt-2 pb-2 text-center text-nowrap">{{ 'admin.order.shipping_status'|trans }}</th>
                                         <th class="border-top-0 pt-2 pb-2 text-center">{{ 'admin.order.tracking_number'|trans }}</th>
                                         <th class="border-top-0 pt-2 pb-2 text-center">{{ 'admin.order.delivery'|trans }}</th>
-                                        <th class="border-top-0 pt-2 pb-2 text-center pr-3"></th>
+                                        <!-- <th class="border-top-0 pt-2 pb-2 text-center pr-3"></th> -->
                                     </tr>
                                     </thead>
                                     <tbody>
