--- a/src/Eccube/Resource/template/admin/Product/index.twig
+++ b/src/Eccube/Resource/template/admin/Product/index.twig
@@ -356,6 +356,7 @@ file that was distributed with this source code.
                                         <th class="border-top-0 pt-2 pb-2">{{ 'admin.product.price'|trans }}</th>
                                         <th class="border-top-0 pt-2 pb-2">{{ 'admin.product.stock'|trans }}</th>
                                         <th class="border-top-0 pt-2 pb-2 text-nowrap">{{ 'admin.product.display_status__short'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-2">{{ 'Min Delivering Time'|trans }}</th>
                                         <th class="border-top-0 pt-2 pb-2">{{ 'admin.common.create_date'|trans }}</th>
                                         <th class="border-top-0 pt-2 pb-2">{{ 'admin.common.update_date'|trans }}</th>
                                         <th class="border-top-0 pt-2 pb-2 pr-3" colspan="3"></th>
@@ -408,6 +409,9 @@ file that was distributed with this source code.
                                             </td>
                                             <td class="align-middle">
                                                 {{ Product.status.name }}
+                                            </td>
+                                            <td class="align-middle">
+                                                {{ Product.delivery_date}}days
                                             </td>
                                             <td class="align-middle">
                                                 {{ Product.create_date|date_min }}
