--- a/src/Eccube/Resource/template/default/Mypage/history.twig
+++ b/src/Eccube/Resource/template/default/Mypage/history.twig
@@ -193,6 +193,19 @@ file that was distributed with this source code.
                        data-confirm="false">{{ 'front.mypage.reorder'|trans }}</a>
                     {% endif %}
                 </div>
+                <div class="ec-totalBox">
+                    {% if stockOrder %}
+                            <a href="{{ url('receipe', {'order_no': Order.order_no }) }}"
+                        class="ec-blockBtn--cancel load-overlay" {{ csrf_token_for_anchor() }} data-method="put"
+                        data-confirm="false">{{ 'Receipe'|trans }}</a>
+                    {% endif %}
+                </div>
+                <!-- <div class="ec-totalBox">
+                    {% if stockOrder %}
+                            <a  href="{{ url('customer_order_export_order', {'order_no': Order.order_no }) }}" id="orderCsvDownload"
+                        class="ec-blockBtn--cancel">{{ 'admin.order.order_csv'|trans }}</a>
+                    {% endif %}
+                </div> -->
                 {% if remessage %}
                     <p class="ec-color-accent">
                         <strong>{{ 'front.mypage.reorder_message'|trans }}</strong>
