Change product id as String in new eccube project

--- a/src/Eccube/Resource/template/admin/Product/index.twig
+++ b/src/Eccube/Resource/template/admin/Product/index.twig
@@ -411,7 +411,7 @@ file that was distributed with this source code.
                                                 {{ Product.status.name }}
                                             </td>
                                             <td class="align-middle">
-                                                {{ Product.delivery_date}}days
+                                                {{ Product.desire_delivery_date}}days
                                             </td>
                                             <td class="align-middle">
                                                 {{ Product.create_date|date_min }}
